[package]
name = "puffyjuice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # Create a DLL instead of a normal binary

[dependencies]
rglua = "1.0.0"
winapi = {version = "0.3.9", features = ["consoleapi"]}
flexgen = {path = "../flexgen"}
once_cell = "1.9.0"
rand = "*"

[package.metadata.cargo-post.dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }